Fix: add truncate to product colours

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -72,7 +72,7 @@ img .home-button {
 /* products  */
 
 /* truncate text if product name too long https: //css-tricks.com/flexbox-truncated-text/  */
-.product-name {
+.product-trunc {
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
